clusters/talos-cluster/apps/_components/tunnel-proxy/ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: cf-tunnel-tunnelplaceholder
spec:
  controller: traefik.io/ingress-controller
