clusters/talos-cluster/apps/_components/tunnel-proxy/networkpolicy-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: traefik-tunnelplaceholder-default-deny
  namespace: traefik-tunnelplaceholder
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
